Добавлены новые шаблоны в реестр

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 DB_USER=postgres
-DB_PASSWORD=noneofthemworks83odprwmw
+DB_PASSWORD=banananano123321heran%
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=wom_db
