--- a/server/package.json
+++ b/server/package.json
@@ -1,32 +1,23 @@
 {
-  "name": "wom-client",
-  "private": true,
+  "name": "wom-server",
   "version": "1.0.0",
+  "description": "WOM API Server",
+  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
     "start": "node index.js",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "dev": "nodemon index.js"
   },
   "dependencies": {
-    "bcrypt": "^6.0.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "framer-motion": "^11.0.0",
-    "google-auth-library": "^10.5.0",
+    "dotenv": "^16.4.5",
+    "express": "^5.0.0",
+    "google-auth-library": "^9.6.3",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.344.0",
-    "pg": "^8.16.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0"
+    "pg": "^8.11.3"
   },
   "devDependencies": {
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
-    "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.4"
+    "nodemon": "^3.1.0"
   }
 }
